--- a/package.json
+++ b/package.json
@@ -9,19 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
+    "@prisma/client": "^6.6.0",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "mixpanel-browser": "^2.64.0",
+    "next": "15.3.1",
+    "next-auth": "^4.24.11",
+    "postcss": "^8.5.3",
+    "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-hook-form": "^7.56.1",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
+    "swr": "^2.3.3",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
+    "eslint": "^9.25.1",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-prettier": "^10.1.2",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5"
   }
 }
