--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:stable": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,13 +12,12 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@prisma/client": "^6.6.0",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.9.1",
     "mixpanel-browser": "^2.64.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
-    "postcss": "^8.5.3",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -32,15 +32,16 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.14",
     "eslint": "^9.25.1",
     "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "^10.1.2",
+    "postcss": "^8.4.24",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
 }
