--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.0",
     "@headlessui/react": "^2.2.2",
     "@prisma/client": "^6.6.0",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.9.0",
+    "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.1",
     "mixpanel-browser": "^2.64.0",
     "next": "15.3.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.27",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -32,7 +35,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.17.31",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.14",
