Enhance Next.js configuration with strict mode, add Supabase dependencies, and refactor authentication flow. Update Navbar for improved mobile experience and replace NextAuthProvider with SessionProvider. Remove unused registration route and improve error handling in AuthForm.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
     "dev:stable": "next dev",
     "build": "next build",
     "start": "next start",
@@ -13,10 +14,14 @@
     "@auth/prisma-adapter": "^2.9.0",
     "@headlessui/react": "^2.2.2",
     "@prisma/client": "^6.6.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.9.1",
     "mixpanel-browser": "^2.64.0",
     "next": "15.3.1",
